# rinha-rust-axum

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
db/: v0_create_people.sql
src/: Erros do tecmundo-core.md  main.rs  persistence.rs
