[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version= "0.3.31", features = ["macros", "serde", "formatting", "parsing"] }
tokio = {  version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v7", "serde"] }
